lab5/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
spec:
  type: NodePort
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
